--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name=".activity.StarterActivity"
             android:theme="@style/AppTheme.Toolbarless"/>
+        <activity android:name=".activity.LegalActivity">
+        </activity>
     </application>
 
 </manifest>
