--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+
 
         <activity
             android:name=".MapsActivity"
@@ -34,6 +32,14 @@
             android:name=".activity.LegalActivity"
             android:label="@string/starter_btn_privacy_legal">
         </activity>
+
+        <meta-data
+            android:name="google_analytics_adid_collection_enabled"
+            android:value="false"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
     </application>
 
 </manifest>
