#27: Download district thumbs and copy them to assets.

--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -37,8 +37,12 @@ task generateStreets(dependsOn: 'run') {
 
     doLast {
         copy {
-            from 'output/'
+            from 'output/raw/'
             into '../app/src/main/res/raw'
+        }
+        copy {
+            from 'output/assets/'
+            into '../app/src/main/assets'
         }
     }
 }
