--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.billingclient:billing:2.0.3'
 
     // Android X: Room
     implementation 'androidx.room:room-runtime:2.1.0'
